@@ -2,6 +2,8 @@ ThisBuild / version := "0.1.0-SNAPSHOT"
 
 ThisBuild / scalaVersion := "3.3.7"
 
+javaOptions += "--enable-native-access=ALL-UNNAMED"
+
 lazy val root = (project in file("."))
   .settings(
     name             := "password-manager",
